feat(project): pow, log, ln, root, inv, exp